# gstvidmag

./: README.md  meson.build
src/: .gitignore  gstevmfilter.c  gstevmfilter.h  gstvidmag.c  gstvidmag.h
